2002-10-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/dynamic-engraver.cc (process_music): take dynamic direction
	from ^_ for crescendi. Idem for slurs and phrasing slurs.

	* ly/grace-init.ly: add-to-grace-init: function to portably add
	settings to \grace. 

	* lily/dynamic-engraver.cc (process_music): finish (de)crescendo
	if we get an absolute dynamic event.
 
	* lily/time-signature-engraver.cc (process_music): warn for \time 5/5

	* lily/source-file.cc (get_line): oops. All line numbers were off
	by 2. Fix that. 

	* lily/parser.yy (event_that_take_dir): allow () \< \> \! \( \) to
	be after the note, combined with -_^, i.e. c4-(-\)-\>  

	* ly/params-init.ly (ledgerlinethickness): use Scheme expressions.

	* lily/parser.yy (number_factor): remove (number) as number
	expression. ("Let them eat Lisp").

2002-10-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/horizontal-bracket.cc: new file.

	* lily/horizontal-bracket-engraver.cc: new file.

	* input/regression/note-group-bracket.ly: new file. Support
	horizontal note brackets for music analysis.

	* lily/stem.cc (flag): new flag-style: no-flag.

	* input/test/stem-cross-staff.ly: new file

	* lily/include/midi-stream.hh: use stdio.h iso. iostream.h

	* lily/parser.yy: remove \dynamicscript.

	* ly/dynamic-scripts-init.ly: redo the dynamic scripts
	definitions. 

	* python/midi.c (midi_error): take two arguments.

	* Merge 1.6.5 changes:
	
2002-10-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/grob-description.scm (minimum-beam-collision-distance): 0.75
	staff-space.  Previous 1.5 was probably meant as half-spaces.
	(cautionary-style): parentheses (was: smaller).  This is what doco
	says, and it seems more logical.

	* Documentation/user/refman.itely (Chromatic alterations): Bugfix
	for 2nd sentence.

2002-10-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* make/lilypond.redhat.spec.in: various fixes for RedHat 8.0

2002-10-03  Jan Nieuwenhuizen  <janneke@gnu.org>
