@@ -2727,6 +2727,7 @@ sometimes voices can cross between the two staves.  The
 behavior.  In this section we discuss the @internalsref{PianoStaff} and some
 other pianistic peculiarities.
 
+
 @menu
 * Automatic staff changes::     
 * Manual staff switches::       
@@ -2734,6 +2735,21 @@ other pianistic peculiarities.
 * Arpeggio::                    
 * Voice follower lines::        
 @end menu 
+
+@refbugs
+
+There is no support for putting chords across staves.  You can get
+this result by increasing the length of the stem in the lower stave so
+it reaches the stem in the upper stave, or vice versa. An example is
+included with the distribution as @file{input/test/stem-cross-staff.ly}.
+
+@cindex cross staff stem
+@cindex stem, cross staff
+
+
+@c fixme: should have hyperlinks as well.
+
+
 
 
 @c .   {Automatic staff changes}
@@ -2840,32 +2856,6 @@ may be extended to the end of the note head.
    #'shorten-pair = #'(0 . -1.0)
 c''4 \sostenutoDown d''4 e''4 c'4
 f'4 g'4 a'4 \sostenutoUp
-@end lilypond
-
-@node Cross staff stems
-@subsection Cross staff stems
-@cindex  Cross staff stems
-@cindex Stems, cross staff
-
-Unfortunately, there is no support for putting chords across staves.
-You can get this result by increasing the length of the stem in the
-lower stave so it reaches the stem in the upper stave, or vice versa.
-
-@lilypond
-
-sUp = \translator Staff = "up"
-sDown = \translator Staff = "down"
-
-stemExtend = \property Voice.Stem \set #'length = #22
-stemNormal = \property Voice.Slur \revert #'length
-
-
-        < { \stemDown \sDown s4.             a, } \\
-          { \stemDown \sUp   f4. \stemExtend f  }> |
-
-        \stemNormal
-
-        [...]
 @end lilypond
 
 @node Arpeggio
@@ -4218,8 +4208,6 @@ object, and set a object property in that object.
 @subsection Tuning groups of objects 
 
 @cindex object description
-
-
 
 A object definition is a Scheme association list, that is stored in a
 context property.  By assigning to that property (using plain
