@@ -6,6 +6,11 @@ med_thick = round (1.5 stafflinethickness);
 bottom_blot = 1.3 serif_thick;
 
 
+code := 32;
+fet_beginchar("Space", "space", "space")
+	set_char_box(0, horizontal_space#,  0, ex#);
+fet_endchar;
+
 
 %
 % Couldn't find many z examples. This one is losely inspired 
