@@ -14,6 +14,11 @@ ascender# := 0.72 ex#;
 staffspace# := 1.75 / 2.0 * ex#;
 stafflinethickness# := staffspace# / 10;
 
+horizontal_space# :=  .66 ex#;
+
+font_x_height ex#;
+font_normal_space horizontal_space#;
+
 define_pixels (staffspace, stafflinethickness, ex, descender, ascender);
 
 fet_beginfont("feta-din", design_size);
